demos/c_cpp_includes/dtwainx.h

/* DTWAIN Initialization */
DTWAIN_HANDLE  DLLENTRY_DEF      DTWAIN_SysInitialize(VOID_PROTOTYPE);
/* Initialize DTWAIN without having the "Resources not found" error box blocking the client */
DTWAIN_HANDLE  DLLENTRY_DEF      DTWAIN_SysInitializeNoBlocking(VOID_PROTOTYPE);
/* Uninitialize DTWAIN (closes all open sources, shuts down the link to the TWAIN DSM) */
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_SysDestroy(VOID_PROTOTYPE);
/* Modal / Modeless TWAIN message operation */
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_SetTwainMode(LONG lAcquireMode);
DTWAIN_ARRAY   DLLENTRY_DEF      DTWAIN_TestGetCap(DTWAIN_SOURCE Source, LONG lCapability);
DTWAIN_BOOL    DLLENTRY_DEF      DTWAIN_SetSourceUnit(DTWAIN_SOURCE Source, LONG Unit);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_ShowUIOnly(DTWAIN_SOURCE Source);
/* Only to be used by static libraries.  This is mapped to DTWAIN_SysInitializexxx() for DLL */
DTWAIN_HANDLE DLLENTRY_DEF  DTWAIN_SysInitializeLib(HINSTANCE hInstance);
/* TIFF options */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetTIFFInvert(DTWAIN_SOURCE Source, LONG Setting);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetTIFFCompressType(DTWAIN_SOURCE Source, LONG Setting);
/* Used to skip any problems getting image info on acquire.  Currently undocumented. */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SkipImageInfoError(DTWAIN_SOURCE Source, DTWAIN_BOOL bSkip);
/* ICAP_XRESOLUTION, ICAP_YRESOLUTION */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetXResolution(DTWAIN_SOURCE Source, DTWAIN_FLOAT xResolution);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetYResolution(DTWAIN_SOURCE Source, DTWAIN_FLOAT yResolution);
/* ICAP_SHADOW */
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_SetShadow( DTWAIN_SOURCE Source, DTWAIN_FLOAT Shadow);
/* ICAP_THRESHOLD */
DTWAIN_BOOL          DLLENTRY_DEF    DTWAIN_SetThreshold( DTWAIN_SOURCE Source, DTWAIN_FLOAT Threshold, DTWAIN_BOOL bSetBithDepthReduction);
/* Threading functions */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_StartThread( DTWAIN_HANDLE DLLHandle );
/* TWAIN time-out values */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetTwainTimeout( LONG milliseconds );
/* User-defined callback to change DIB */
DTWAIN_DIBUPDATE_PROC DLLENTRY_DEF DTWAIN_SetUpdateDibProc(DTWAIN_DIBUPDATE_PROC DibProc);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_ShutdownOCREngine(DTWAIN_OCRENGINE OCREngine);
/* TWAIN version 2 */
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_SetTwainDSM(LONG DSMType);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_UnlockMemory(HANDLE h);
DTWAIN_BOOL DLLENTRY_DEF DTWAIN_UnlockMemoryEx(HANDLE h);