demos/Python/dtwain.py

     theDLL.DTWAIN_SetSaveFileNameA.restype = ct.c_long
     theDLL.DTWAIN_SetSaveFileNameW.restype = ct.c_long
     theDLL.DTWAIN_SetShadow.restype = ct.c_long
     theDLL.DTWAIN_SetShadowString.restype = ct.c_long
     theDLL.DTWAIN_SetShadowStringA.restype = ct.c_long
     theDLL.DTWAIN_SetShadowStringW.restype = ct.c_long
     theDLL.DTWAIN_SetSourceUnit.restype = ct.c_long
     theDLL.DTWAIN_SetTIFFCompressType.restype = ct.c_long
     theDLL.DTWAIN_SetTIFFInvert.restype = ct.c_long
     theDLL.DTWAIN_SetTempFileDirectory.restype = ct.c_long
     theDLL.DTWAIN_SetTempFileDirectoryA.restype = ct.c_long
     theDLL.DTWAIN_SetTempFileDirectoryEx.restype = ct.c_long
     theDLL.DTWAIN_SetTempFileDirectoryExA.restype = ct.c_long
     theDLL.DTWAIN_SetTempFileDirectoryExW.restype = ct.c_long
     theDLL.DTWAIN_SetTempFileDirectoryW.restype = ct.c_long
     theDLL.DTWAIN_SetThreshold.restype = ct.c_long
     theDLL.DTWAIN_SetThresholdString.restype = ct.c_long
     theDLL.DTWAIN_SetThresholdStringA.restype = ct.c_long
     theDLL.DTWAIN_SetThresholdStringW.restype = ct.c_long
     theDLL.DTWAIN_SetTwainDSM.restype = ct.c_long
     theDLL.DTWAIN_SetTwainLog.restype = ct.c_long
     theDLL.DTWAIN_SetTwainLogA.restype = ct.c_long
     theDLL.DTWAIN_SetTwainLogW.restype = ct.c_long
     theDLL.DTWAIN_SetTwainMode.restype = ct.c_long
     theDLL.DTWAIN_SetTwainTimeout.restype = ct.c_long
     theDLL.DTWAIN_SetUpdateDibProc.restype = theDLL.DIBUPDATEPROC_TYPE
     theDLL.DTWAIN_SetXResolution.restype = ct.c_long
     theDLL.DTWAIN_SetXResolutionString.restype = ct.c_long
     theDLL.DTWAIN_SetXResolutionStringA.restype = ct.c_long
     theDLL.DTWAIN_SetXResolutionStringW.restype = ct.c_long
     theDLL.DTWAIN_SetYResolution.restype = ct.c_long
     theDLL.DTWAIN_SetYResolutionString.restype = ct.c_long
     theDLL.DTWAIN_SetYResolutionStringA.restype = ct.c_long
     theDLL.DTWAIN_SetYResolutionStringW.restype = ct.c_long
     theDLL.DTWAIN_ShowUIOnly.restype = ct.c_long
     theDLL.DTWAIN_ShutdownOCREngine.restype = ct.c_long
     theDLL.DTWAIN_SkipImageInfoError.restype = ct.c_long
     theDLL.DTWAIN_StartThread.restype = ct.c_long
     theDLL.DTWAIN_StartTwainSession.restype = ct.c_long
     theDLL.DTWAIN_StartTwainSessionA.restype = ct.c_long
     theDLL.DTWAIN_StartTwainSessionW.restype = ct.c_long
     theDLL.DTWAIN_SysDestroy.restype = ct.c_long
     theDLL.DTWAIN_SysInitialize.restype = ct.c_void_p
     theDLL.DTWAIN_SysInitializeEx.restype = ct.c_void_p
     theDLL.DTWAIN_SysInitializeEx2.restype = ct.c_void_p
     theDLL.DTWAIN_SysInitializeEx2A.restype = ct.c_void_p
     theDLL.DTWAIN_SysInitializeEx2W.restype = ct.c_void_p
     theDLL.DTWAIN_SysInitializeExA.restype = ct.c_void_p
     theDLL.DTWAIN_SysInitializeExW.restype = ct.c_void_p
     theDLL.DTWAIN_SysInitializeLib.restype = ct.c_void_p
     theDLL.DTWAIN_SysInitializeLibEx.restype = ct.c_void_p
     theDLL.DTWAIN_SysInitializeLibEx2.restype = ct.c_void_p
     theDLL.DTWAIN_SysInitializeLibEx2A.restype = ct.c_void_p
     theDLL.DTWAIN_SysInitializeLibEx2W.restype = ct.c_void_p
     theDLL.DTWAIN_SysInitializeLibExA.restype = ct.c_void_p
     theDLL.DTWAIN_SysInitializeLibExW.restype = ct.c_void_p
     theDLL.DTWAIN_SysInitializeNoBlocking.restype = ct.c_void_p
     theDLL.DTWAIN_TestGetCap.restype = ct.c_void_p
     theDLL.DTWAIN_UnlockMemory.restype = ct.c_long
     theDLL.DTWAIN_UnlockMemoryEx.restype = ct.c_long
